--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 Deep Connections</p>
     </footer>
     <script src="script.js"></script>
 </body>
