--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Therapy Bot</title>
+    <title>Deeper Connections</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>AI Therapy Bot</h1>
+        <h1>Deeper Connections</h1>
     </header>
     <main>
+        <nav>
+            <ul class="nav-list">
+                <li><a href="home.html">Home</a></li>
+                <li><a href="evi.html">Evi</a></li>
+                <li><a href="contact.html">Profile</a></li>
+            </ul>
+        </nav>      
         <section>
             <h2>Start Your Session</h2>
             <textarea id="userInput" placeholder="Type your thoughts here..."></textarea>
