--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>AI Therapy Bot</h1>
     </header>
     <main>
-        <nav>
-            <ul class="nav-list">
+        <nav class="navigationbar">
+            <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="evi.html">Evi</a></li>
                 <li><a href="contact.html">Profile</a></li>
