edited the home page

--- a/home.html
+++ b/home.html
@@ -17,12 +17,12 @@
     </header>
 
     <main>
-        <section>
-            <h2>Start a Session</h2>
-            <p>Our AI-powered therapy bot is here to help you express your thoughts and feelings. Start a conversation below:</p>
+        <section class = "intro">
+            <h2>Your AI-Powered Therapy Companion</h2>
+            <p>Our AI-powered therapy bot is here to help you express your thoughts and feelings in a safe and supportive environment.</p>
         </section>
 
-        <section>
+        <section class = "features">
             <h2>Features</h2>
             <ul>
                 <li>AI-powered conversational therapy</li>
@@ -32,7 +32,7 @@
             </ul>
         </section>
 
-        <section>
+        <section class = "why use">
             <h2>Why Use Deeper Connections?</h2>
             <p>Our bot is designed to help users process their thoughts in a safe and judgment-free environment. Whether you're feeling stressed, anxious, or just want to talk, the AI is here to listen.</p>
         </section>
