--- a/contact.html
+++ b/contact.html
@@ -3,28 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deeper Connections</title>
+    <title>Home - Deeper Connections</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>AI Therapy Bot</h1>
-    </header>
+            <header>
+                <h1>Welcome to Deeper Connections</h1>
+                <nav>
+                    <a href="home.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </header>
     <main>
-        <nav class="navigationbar">
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="evi.html">Evi</a></li>
-                <li><a href="contact.html">Profile</a></li>
-            </ul>
-        </nav>      
-        <section>
-            <h2>Start Your Session</h2>
-            <textarea id="userInput" placeholder="Type your thoughts here..."></textarea>
-            <button id="submitBtn">Send</button>
-            <div id="response"></div>
-        </section>
-    </main>
+        
+    </main> 
+
+
     <footer>
         <p>&copy; 2024 Deep Connections</p>
     </footer>
