made the contact and evi the same for now

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
         <h1>Welcome to Deeper Connections</h1>
         <nav>
             <a href="home.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="evi.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
@@ -32,7 +32,7 @@
             </ul>
         </section>
 
-        <section class = "why use">
+        <section class = "why-use">
             <h2>Why Use Deeper Connections?</h2>
             <p>Our bot is designed to help users process their thoughts in a safe and judgment-free environment. Whether you're feeling stressed, anxious, or just want to talk, the AI is here to listen.</p>
         </section>
