--- a/evi.html
+++ b/evi.html
@@ -7,22 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <header>
-            <nav class="navigationbar">
-                <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="evi.html">Evi</a></li>
-                    <li><a href="contact.html">Profile</a></li>
-                </ul>
-            </nav> 
-            <h1>Welcome to Deeper Connections</h1> 
-        </header> 
+            <header>
+                <h1>Welcome to Deeper Connections</h1>
+                <nav>
+                    <a href="home.html">Home</a>
+                    <a href="evi.html">About</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </header>
     <main>
-        <h2>Start Your Session</h2>
-        <textarea id="userInput" placeholder="Type your thoughts here..."></textarea>
-        <button id="submitBtn">Send</button>
-        <div id="response"></div>
+        
     </main> 
+
+
     <footer>
         <p>&copy; 2024 Deep Connections</p>
     </footer>
