--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
         <h1>Welcome to Deeper Connections</h1>
         <nav>
             <a href="home.html">Home</a>
-            <a href="evi.html">About</a>
+            <a href="evi.html">Evi</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
