--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="home.html">Home</a>
             <a href="evi.html">Evi</a>
-            <a href="contact.html">Contact</a>
+            <a href="contact.html">My Connections</a>
         </nav>
     </header>
 
@@ -22,6 +22,8 @@
             <p>Our AI-powered therapy bot is here to help you express your thoughts and feelings in a safe and supportive environment.</p>
         </section>
 
+        
+            <img src="https://export-download.canva.com/6Douc/DAGT_e6Douc/12/0/0002-675984137694988535.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJHKNGJLC2J7OGJ6Q%2F20241019%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20241019T051501Z&X-Amz-Expires=5241&X-Amz-Signature=8f76da6171a314d05fd531277982b8b29f035c7fd3eb3ae16bb57c811d174b14&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%2A%3DUTF-8%27%27Deeper.png&response-expires=Sat%2C%2019%20Oct%202024%2006%3A42%3A22%20GMT" class = "center-image">
         <section class = "features">
             <h2>Features</h2>
             <ul>
@@ -36,6 +38,8 @@
             <h2>Why Use Deeper Connections?</h2>
             <p>Our bot is designed to help users process their thoughts in a safe and judgment-free environment. Whether you're feeling stressed, anxious, or just want to talk, the AI is here to listen.</p>
         </section>
+        <img src= "https://export-download.canva.com/6Douc/DAGT_e6Douc/15/0/0002-675984136602522881.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJHKNGJLC2J7OGJ6Q%2F20241018%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20241018T132326Z&X-Amz-Expires=62770&X-Amz-Signature=cf898ef5d5db436cd81a9a9a7b29b47859f035947dcf3766b68b24e95b9d1fd8&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%2A%3DUTF-8%27%27Deeper.png&response-expires=Sat%2C%2019%20Oct%202024%2006%3A49%3A36%20GMT" class = "center-image">
+
     </main>
 
     <footer>
