--- a/evi.html
+++ b/evi.html
@@ -11,6 +11,7 @@
                 <h1>Welcome to Deeper Connections</h1>
                 <nav>
                     <a href="home.html">Home</a>
+                    <a href="about.html">About</a>
                     <a href="evi.html">Evi</a>
                     <a href="contact.html">Contact</a>
                 </nav>
