put the features and why use in the about page

--- a/about.html
+++ b/about.html
@@ -17,6 +17,20 @@
                 </nav>
             </header>
     <main>
+        <section class = "features">
+            <h2>Features</h2>
+            <ul>
+                <li>AI-powered conversational therapy</li>
+                <li>Real-time mental health support</li>
+                <li>Private and secure sessions</li>
+                <li>Easy-to-use interface</li>
+            </ul>
+        </section>
+
+        <section class = "why-use">
+            <h2>Why Use Deeper Connections?</h2>
+            <p>Our bot is designed to help users process their thoughts in a safe and judgment-free environment. Whether you're feeling stressed, anxious, or just want to talk, the AI is here to listen.</p>
+        </section>
         
     </main> 
 
