got the video to show and it is clickable

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
         
         <a href="evi.html">
         <video width="300" autoplay loop muted>
-            <source src="/Users/ashwikagampa/Downloads/My Movie 3.mp4" type="video/mp4">
+            <source src="/videos/Deeper.mp4" type="video/mp4">
         </video>
         </a>
         
