--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 
         
         <img src="https://export-download.canva.com/6Douc/DAGT_e6Douc/12/0/0002-675984137694988535.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJHKNGJLC2J7OGJ6Q%2F20241019%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20241019T051501Z&X-Amz-Expires=5241&X-Amz-Signature=8f76da6171a314d05fd531277982b8b29f035c7fd3eb3ae16bb57c811d174b14&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%2A%3DUTF-8%27%27Deeper.png&response-expires=Sat%2C%2019%20Oct%202024%2006%3A42%3A22%20GMT" class = "center-image">
-       
+        <hr style="border: none; border-top: 3px solid navy; margin: 20px auto; width:80%">
         <div class="video-container">
             <a href="evi.html">
                 <video width="400" autoplay loop muted>
