changed contact to myconnections

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
             <a href="home.html">Home</a>
             <a href="about.html">About</a>
             <a href="evi.html">Evi</a>
-            <a href="contact.html">Contact</a>
+            <a href="myconnections.html">My Connections</a>
         </nav>
     </header>
 
