--- a/about.html
+++ b/about.html
@@ -44,20 +44,23 @@
             <h2>Meet the Team</h2>
             <div class="team-members">
                 <div class="team-member">
-                    <img src="member1.jpg" alt="Member 1">
+                    <img src="https://drive.google.com/uc?id=1skQkk2ng3tyBQCCZb-stpMrlZai9qHc6" alt="Member 1">
                     <h3>Member 1</h3>
                     <p>Bio for member 1 goes here. A brief description of their role and background.</p>
                 </div>
+                <hr> 
                 <div class="team-member">
                     <img src="member2.jpg" alt="Member 2">
                     <h3>Member 2</h3>
                     <p>Bio for member 2 goes here. A brief description of their role and background.</p>
                 </div>
+                
                 <div class="team-member">
                     <img src="member3.jpg" alt="Member 3">
                     <h3>Member 3</h3>
                     <p>Bio for member 3 goes here. A brief description of their role and background.</p>
                 </div>
+                <hr> 
                 <div class="team-member">
                     <img src="member4.jpg" alt="Member 4">
                     <h3>Member 4</h3>
