--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
             <h2>Meet the Team</h2>
             <div class="team-members">
                 <div class="team-member">
-                    <img src="/Users/ashwikagampa/Desktop/Deeper-Connections/images/IMG_1326.jpg" alt="Member 1">
+                    <img src="images/IMG_1326.jpg" alt="Member 1">
                     <h3>Member 1</h3>
                     <p>Bio for member 1 goes here. A brief description of their role and background.</p>
                 </div>
