--- a/about.html
+++ b/about.html
@@ -45,25 +45,25 @@
             <div class="team-members">
                 <div class="team-member">
                     <img src="images/IMG_1326.jpg" alt="Member 1">
-                    <h3>Member 1</h3>
-                    <p>Bio for member 1 goes here. A brief description of their role and background.</p>
+                    <h3>Ashwika Gampa</h3>
+                    <p>Sophmore @ UC Berkeley</p>
                 </div>
                 <hr> 
                 <div class="team-member">
-                    <img src="member2.jpg" alt="Member 2">
-                    <h3>Member 2</h3>
-                    <p>Bio for member 2 goes here. A brief description of their role and background.</p>
+                    <img src="images/IMG20230315184128.jpg" alt="Member 2">
+                    <h3>Armita Katarapu</h3>
+                    <p>Senior @ UT Dallas</p>
                 </div>
                 
                 <div class="team-member">
                     <img src="member3.jpg" alt="Member 3">
-                    <h3>Member 3</h3>
+                    <h3>Atharva Berde</h3>
                     <p>Bio for member 3 goes here. A brief description of their role and background.</p>
                 </div>
                 <hr> 
                 <div class="team-member">
                     <img src="member4.jpg" alt="Member 4">
-                    <h3>Member 4</h3>
+                    <h3>Rajeev Raghuram</h3>
                     <p>Bio for member 4 goes here. A brief description of their role and background.</p>
                 </div>
             </div>
