--- a/evi.html
+++ b/evi.html
@@ -14,6 +14,7 @@
                     <a href="about.html">About</a>
                     <a href="evi.html">Evi</a>
                     <a href="myconnections.html">My Connections</a>
+                    <a href="login/login.html">Login</a>
                 </nav>
             </header>
     <main>
