--- a/login/login.html
+++ b/login/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Deeper Connections</title>
-    <link rel="stylesheet" href="../style.css"> <!-- Adjust the path to your CSS file -->
+    <link rel="stylesheet" href="../styles.css"> <!-- Adjust the path to your CSS file -->
 </head>
 <body>
     <header>
