final login logout successful

--- a/login/login.html
+++ b/login/login.html
@@ -51,7 +51,9 @@
                 
                 <button type="submit">Sign Up</button>
             </form>
-        </div>        
+        </div>   
+        <button id="logoutButton">Logout</button>
+     
     </main>
     <footer>
         <p>&copy; 2024 Deep Connections</p>
