put in mission statement

--- a/about.html
+++ b/about.html
@@ -23,7 +23,8 @@
             <div class="mission">
                 <h2>Our Mission</h2>
                 <p>
-                        ----------
+                        To empower individuals by providing empathetic, voice and facial recognition AI that supports mental well being, 
+                        fosters self awareness, and highlights areas of concern for better emotion care. 
                 </p>
             </div>
             <div class="group-picture">
@@ -34,10 +35,10 @@
         <div class="services-container">
             <h2>Our Services</h2>
             <ul class="services-list">
-                <li>Service 1:</li>
+                <li>Service 1: </li>
                 <li>Service 2: </li>
                 <li>Service 3: </li>
-                <li>Service 4:</li>
+                <li>Service 4: </li>
             </ul>
         </div>
 
