--- a/login/login.html
+++ b/login/login.html
@@ -25,7 +25,7 @@
                 <input type="text" id="username" name="username" required>
                 <label for="loginPassword">Password:</label> <!-- Changed for clarity -->
                 <input type="password" id="loginPassword" name="password" required> <!-- Changed for clarity -->
-                <button type="submit">Login</button>
+                <button type="submit" class="signup-button">Login</button>
             </form>
         </div>
         <div class="intro">
@@ -49,10 +49,12 @@
                 <label for="emergencyContact2">Emergency Contact 2:</label>
                 <input type="text" id="emergencyContact2" name="emergencyContact2" required>
                 
-                <button type="submit">Sign Up</button>
+                <button type="submit" class="signup-button">Sign Up</button>
+
             </form>
         </div>   
-        <button id="logoutButton">Logout</button>
+        <button type="logoutButton" class="logout-button">Logout</button>
+
      
     </main>
     <footer>
