--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         
         <div class="about-container">
             <div class="mission">
-                <h2>Our Mission</h2>
+                <h2 class = "h21">Our Mission</h2>
                 <p>
                         To empower individuals by providing empathetic, voice and facial recognition AI that supports mental well being, 
                         fosters self awareness, and highlights areas of concern for better emotion care. 
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="services-container">
-            <h2>Our Services</h2>
+            <h2 class = "h21">Our Services</h2>
             <ul class="services-list">
                 <li>Service 1: </li>
                 <li>Service 2: </li>
@@ -42,7 +42,7 @@
         </div>
 
         <div class="team-container">
-            <h2>Meet the Team</h2>
+            <h2 class = "h21"> Meet the Team</h2>
             <div class="team-members">
                 <div class="team-member">
                     <img src="images/IMG_1326.jpg" alt="Member 1">
@@ -57,15 +57,15 @@
                 </div>
                 
                 <div class="team-member">
-                    <img src="member3.jpg" alt="Member 3">
+                    <img src="https://media.licdn.com/dms/image/v2/D5603AQFirJj2GzT9hg/profile-displayphoto-shrink_100_100/profile-displayphoto-shrink_100_100/0/1700980451114?e=1735171200&v=beta&t=vcu721AIENGvFazokCA7mxyVpq0MuWsElJ8o8p3MX8I" alt="Member 3">
                     <h3>Atharva Berde</h3>
-                    <p>Bio for member 3 goes here. A brief description of their role and background.</p>
+                    <p>Junior @ San Jose State University</p>
                 </div>
                 <hr> 
                 <div class="team-member">
-                    <img src="member4.jpg" alt="Member 4">
+                    <img src="images/im3.png" alt="Member 4">
                     <h3>Rajeev Raghuram</h3>
-                    <p>Bio for member 4 goes here. A brief description of their role and background.</p>
+                    <p>Sophmore @ UC Davis</p>
                 </div>
             </div>
         </div>
