--- a/interaction.html
+++ b/interaction.html
@@ -1,5 +1,5 @@
 <div class = "embedded-app-container">
-  <iframe src = "https://calhacks-october2024-2obgjzegz-rajeevraghurams-projects.vercel.app/"
+  <iframe src = "https://calhacks-october2024.vercel.app/"
     </div>
 
     <style>
