--- a/interaction.html
+++ b/interaction.html
@@ -1,5 +1,5 @@
 <div class = "embedded-app-container">
-  <iframe src = "https://calhacks-october2024.vercel.app/"
+  <iframe src = "https://calhacks-october2024.vercel.app" width = "800" height = "600" frameborder = "0"></iframe>
     </div>
 
     <style>
