--- a/login/login.html
+++ b/login/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Deeper Connections</title>
-    <link rel="stylesheet" href="../styles.css"> <!-- Adjust the path to your CSS file -->
+    <link rel="stylesheet" href="../styles.css"> 
 </head>
 <body>
     <header>
@@ -23,14 +23,14 @@
             <form id="loginForm">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
-                <label for="loginPassword">Password:</label> <!-- Changed for clarity -->
-                <input type="password" id="loginPassword" name="password" required> <!-- Changed for clarity -->
+                <label for="loginPassword">Password:</label> 
+                <input type="password" id="loginPassword" name="password" required> 
                 <button type="submit" class="signup-button">Login</button>
             </form>
         </div>
         <div class="intro">
             <h2>Sign Up</h2>
-            <form id="signupForm"> <!-- Removed action and method since we're handling everything in JavaScript -->
+            <form id="signupForm"> 
                 <label for="signupUsername">Username:</label>
                 <input type="text" id="signupUsername" name="username" required>
                 
@@ -61,6 +61,6 @@
         <p>&copy; 2024 Deep Connections</p>
     </footer>
     
-    <script src="../script.js"></script> <!-- Adjust the path to your JavaScript file -->
+    <script src="../script.js"></script> 
 </body>
 </html>
