--- a/myconnections.html
+++ b/myconnections.html
@@ -22,7 +22,7 @@
         <div class="flex-container">
         <div class="text-container">
         <h2 id="welcomeMessage" style="color: rgb(54, 26, 13); font-size: 35px; font-weight: bold;"></h2>
-        <p id="connectionsMessage" style="color: rgb(130, 80, 72); font-size: 28px; font-weight: bold;">Here are your connections:</p>
+        <p id="connectionsMessage" style="color: #004d40; font-size: 28px; font-weight: bold;">Here are your connections:</p>
         <div id="userInfo"></div> <!-- For displaying user information -->
         <ul id="connectionsList"></ul>
         </div>
