--- a/home.html
+++ b/home.html
@@ -33,6 +33,11 @@
                     <source src="/videos/Deeper.mp4" type="video/mp4">
                 </video>
             </a>
+            <a href="myconnections.html">
+                <video width="400" autoplay loop muted>
+                    <source src="/videos/Deeper (2).mp4" type="video/mp4">
+                </video>
+            </a>
         </div>
     </main>
         <img src= "https://export-download.canva.com/6Douc/DAGT_e6Douc/15/0/0002-675984136602522881.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJHKNGJLC2J7OGJ6Q%2F20241018%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20241018T132326Z&X-Amz-Expires=62770&X-Amz-Signature=cf898ef5d5db436cd81a9a9a7b29b47859f035947dcf3766b68b24e95b9d1fd8&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%2A%3DUTF-8%27%27Deeper.png&response-expires=Sat%2C%2019%20Oct%202024%2006%3A49%3A36%20GMT" class = "center-image">
