--- a/evi.html
+++ b/evi.html
@@ -18,18 +18,11 @@
                 </nav>
             </header>
     <main>
-        <h1>Welcome to the EVI Demo!</h1>
-        <button id="openEvi">Talk to EVI</button>
+        <h1>Meet EVI!</h1>
+        <a href="https://humetherapy.vercel.app/">
+            <img src="images/hume.png" width="100%" alt="Hume Logo">
+        </a>
     
-        <div id="eviModal" class="modal">
-            <div class="modal-content">
-                <span id="closeEvi" class="close">&times;</span>
-                <h2>Empathic Voice Interface (EVI)</h2>
-                <div id="eviOutput">EVI Output will appear here...</div>
-                <input type="text" id="userInput" placeholder="Type your message...">
-                <button id="sendMessage">Send</button>
-            </div>
-        </div>
     
         <script src="script.js"></script>
 
